syntax = "proto3";

package vectron.worker.v1;

option go_package = "github.com/pavandhadge/vectron/shared/proto/worker";

// The worker service definition.
service WorkerService {
  // Vector operations
  rpc StoreVector(StoreVectorRequest) returns (StoreVectorResponse) {}
  rpc BatchStoreVector(BatchStoreVectorRequest) returns (BatchStoreVectorResponse) {}
  // Streaming batch upsert for large ingests
  rpc StreamBatchStoreVector(stream BatchStoreVectorRequest) returns (BatchStoreVectorResponse) {}
  rpc GetVector(GetVectorRequest) returns (GetVectorResponse) {}
  rpc DeleteVector(DeleteVectorRequest) returns (DeleteVectorResponse) {}
  rpc Search(SearchRequest) returns (SearchResponse) {}
  // Batch multiple searches into a single RPC
  rpc BatchSearch(BatchSearchRequest) returns (BatchSearchResponse) {}
  // Stream HNSW snapshot for search-only replication
  rpc StreamHNSWSnapshot(HNSWSnapshotRequest) returns (stream HNSWSnapshotChunk) {}
  // Stream HNSW WAL updates for search-only replication
  rpc StreamHNSWUpdates(HNSWUpdatesRequest) returns (stream HNSWUpdateBatch) {}

  // Key-value operations
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}

  // Control/Admin operations
  rpc Status(StatusRequest) returns (StatusResponse) {}
  rpc Flush(FlushRequest) returns (FlushResponse) {}
}

// Vector messages
message Vector {
  string id = 1;
  repeated float vector = 2;
  bytes metadata = 3;
}

message StoreVectorRequest {
  uint64 shard_id = 1;
  Vector vector = 2;
  uint64 shard_epoch = 3;
  int64 lease_expiry_unix_ms = 4;
}

message StoreVectorResponse {}

message BatchStoreVectorRequest {
  uint64 shard_id = 1;
  repeated Vector vectors = 2;
  uint64 shard_epoch = 3;
  int64 lease_expiry_unix_ms = 4;
}

message BatchStoreVectorResponse {
  int32 stored = 1;
}

message GetVectorRequest {
  uint64 shard_id = 1;
  string id = 2;
  uint64 shard_epoch = 3;
  int64 lease_expiry_unix_ms = 4;
}

message GetVectorResponse {
  Vector vector = 1;
}

message DeleteVectorRequest {
  uint64 shard_id = 1;
  string id = 2;
  uint64 shard_epoch = 3;
  int64 lease_expiry_unix_ms = 4;
}

message DeleteVectorResponse {}

message SearchRequest {
  uint64 shard_id = 1;
  repeated float vector = 2;
  int32 k = 3;
  bool brute_force = 4;
  bool linearizable = 5;
  string collection = 6;
  uint64 shard_epoch = 7;
  int64 lease_expiry_unix_ms = 8;
}

message SearchResponse {
  repeated string ids = 1;
  repeated float scores = 2;
}

message BatchSearchRequest {
  repeated SearchRequest requests = 1;
}

message BatchSearchResponse {
  repeated SearchResponse responses = 1;
}

// Snapshot streaming
message HNSWSnapshotRequest {
  uint64 shard_id = 1;
}

message HNSWSnapshotChunk {
  uint64 shard_id = 1;
  int64 snapshot_ts_unix_nano = 2;
  bytes data = 3;
  bool done = 4;
}

// WAL update streaming
message HNSWUpdatesRequest {
  uint64 shard_id = 1;
  int64 from_ts_unix_nano = 2;
}

message HNSWUpdate {
  string id = 1;
  bytes value = 2;
  bool delete = 3;
  int64 ts_unix_nano = 4;
}

message HNSWUpdateBatch {
  repeated HNSWUpdate updates = 1;
}

// Key-value messages
message KeyValuePair {
  bytes key = 1;
  bytes value = 2;
}

message PutRequest {
  uint64 shard_id = 1;
  KeyValuePair kv = 2;
  uint64 shard_epoch = 3;
  int64 lease_expiry_unix_ms = 4;
}

message PutResponse {}

message GetRequest {
  uint64 shard_id = 1;
  bytes key = 2;
  uint64 shard_epoch = 3;
  int64 lease_expiry_unix_ms = 4;
}

message GetResponse {
  KeyValuePair kv = 1;
}

message DeleteRequest {
  uint64 shard_id = 1;
  bytes key = 2;
  uint64 shard_epoch = 3;
  int64 lease_expiry_unix_ms = 4;
}

message DeleteResponse {}

// Control/Admin messages
message StatusRequest {
  uint64 shard_id = 1;
  uint64 shard_epoch = 2;
  int64 lease_expiry_unix_ms = 3;
}

message StatusResponse {
  string status = 1;
}

message FlushRequest {
  uint64 shard_id = 1;
  uint64 shard_epoch = 2;
  int64 lease_expiry_unix_ms = 3;
}

message FlushResponse {}
